turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:20: error: not found: value PINK
      setColor(PINK)
               ^